testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment16.errors.txt
a.js(3,7): error TS2339: Property 'Inner' does not exist on type '{}'.
a.js(4,7): error TS2339: Property 'Inner' does not exist on type '{}'.
a.js(9,12): error TS2503: Cannot find namespace 'Outer'.
a.js(13,22): error TS2339: Property 'Inner' does not exist on type '{}'.


==== a.js (4 errors) ====
    var Outer = {};
    
    Outer.Inner = function () {}
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
    Outer.Inner.prototype = {
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
        x: 1,
        m() { }
    }
    
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
    var inner
    inner.x
    inner.m()
    var inno = new Outer.Inner()
                         ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
    inno.x
    inno.m()
    